--- a/static/css/carousel.css
+++ b/static/css/carousel.css
@@ -16,6 +16,18 @@ body {
 .carousel {
   margin-bottom: 4rem;
 }
+
+/* Carousel text class */
+.carousel-text {
+  text-shadow: 0.5px 0.5px 0.5px #5a5a5a;
+  color: white;
+}
+
+/* Carousel background opacity class */
+.carousel-background-image {
+  opacity: 0.3;	
+}
+
 /* Since positioning the image, we need to help out the caption */
 .carousel-caption {
   bottom: 9rem;
@@ -27,6 +39,7 @@ body {
   height: 32rem;
   background-color: #777;
 }
+
 .carousel-item > img {
   position: absolute;
   top: 0;
