--- a/static/css/carousel.css
+++ b/static/css/carousel.css
@@ -25,7 +25,7 @@ body {
 
 /* Carousel background opacity class */
 .carousel-background-image {
-  opacity: 0.3;	
+  opacity: 0.3;
 }
 
 /* Since positioning the image, we need to help out the caption */
@@ -46,6 +46,24 @@ body {
   left: 0;
   min-width: 100%;
   height: 45rem;
+}
+
+.image_full{
+   display:block !important;
+}
+
+.image_mobile{
+  display:none !important;
+}
+
+@media (max-width: 640px) and (min-width: 320px){
+  .image_full{
+   display:none !important;
+  }
+
+  .image_mobile{
+   display:block !important;
+  }
 }
 
 
