--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -125,6 +125,13 @@ header h2{
 
 header nav{
 	display: flex;
+	flex-wrap: nowrap;
+}
+
+@media only screen and (max-width: 472px) {
+	header nav {
+		flex-wrap: wrap;
+	}
 }
 
 header nav li{
