flesh out zula page

--- a/css/logos.css
+++ b/css/logos.css
@@ -39,3 +39,15 @@
 	background-repeat: no-repeat;
 	background-image: url(../assets/img/friday_logo_fitted.png);
 }
+
+#logo-bundesministerium-des-innern {
+	background-size: contain;
+	background-repeat: no-repeat;
+	background-image: url(../assets/img/bmi.svg);
+}
+
+#logo-house-of-resources {
+	background-size: contain;
+	background-repeat: no-repeat;
+	background-image: url(../assets/img/hor.png);
+}
