add more styles to SAP Google logo

--- a/css/features.css
+++ b/css/features.css
@@ -24,6 +24,11 @@
 	margin-bottom: 25px;
 }
 
+.features-logo {
+	mix-blend-mode: multiply;
+	background-color: #555;
+}
+
 .features .grid li p {
 	margin: 0;
 }
